more on example

--- a/sample/app.conf
+++ b/sample/app.conf
@@ -3,14 +3,25 @@ project = {
     name = "example app"
     # project version
     version = "0.0.1"
-    
+    #keyword for 
+    keywords = ["example"]
+
     # (optional ) start command  start from  custom function.
     # init should be a valid function 
-    
     # start = "init"
+
+    #project description
+    description="""
+        A simple project to show stratos syntax
+    """
 
     # dependancies
     dependancies = [
+        # exmple of dependancy 
+        # using  github
+        # {"runner" : "a git remote url"}
+        # or  using semantic version
+        # {"runner" : "0.0.1"}
 
     ]
 }
