--- a/sample/enum_type/app.conf
+++ b/sample/enum_type/app.conf
@@ -1,27 +1,19 @@
 project = {
     # project name
-    name = "example app"
+    name = ""
     # project version
     version = "0.0.1"
     #keyword for 
-    keywords = ["example"]
+    keywords = ["enum"]
 
-    # (optional ) start command  start from  custom function.
-    # init should be a valid function 
-    # start = "init"
 
     #project description
     description="""
-        A simple project to show stratos syntax
+        A simple project to show enum syntax
     """
 
     # dependancies
     dependancies = [
-        # exmple of dependancy 
-        # using  github
-        # {"runner" : "a git remote url"}
-        # or  using semantic version
-        # {"runner" : "0.0.1"}
-
+        
     ]
 }
