--- a/sample/struct_type/app.conf
+++ b/sample/struct_type/app.conf
@@ -1,10 +1,10 @@
 project = {
     # project name
-    name = "example app"
+    name = "struct_type"
     # project version
     version = "0.0.1"
     #keyword for 
-    keywords = ["example"]
+    keywords = ["struct and types"]
 
     # (optional ) start command  start from  custom function.
     # init should be a valid function 
@@ -17,11 +17,6 @@ project = {
 
     # dependancies
     dependancies = [
-        # exmple of dependancy 
-        # using  github
-        # {"runner" : "a git remote url"}
-        # or  using semantic version
-        # {"runner" : "0.0.1"}
-
+     
     ]
 }
