--- a/sample/variables/app.conf
+++ b/sample/variables/app.conf
@@ -1,27 +1,18 @@
 project = {
     # project name
-    name = "example app"
+    name = "variables"
     # project version
     version = "0.0.1"
     #keyword for 
-    keywords = ["example"]
+    keywords = ["variables"]
 
-    # (optional ) start command  start from  custom function.
-    # init should be a valid function 
-    # start = "init"
-
-    #project description
+   
     description="""
-        A simple project to show stratos syntax
+        A simple project to show variables
     """
 
-    # dependancies
     dependancies = [
-        # exmple of dependancy 
-        # using  github
-        # {"runner" : "a git remote url"}
-        # or  using semantic version
-        # {"runner" : "0.0.1"}
+  
 
     ]
 }
