--- a/tooling/vscode/stratos-lsp/package.json
+++ b/tooling/vscode/stratos-lsp/package.json
@@ -28,13 +28,13 @@
 			"type": "object",
 			"title": "Stratos configuration",
 			"properties": {
-				"languageServerExample.maxNumberOfProblems": {
+				"stratosLanguageServer.maxNumberOfProblems": {
 					"scope": "resource",
 					"type": "number",
 					"default": 100,
 					"description": "Controls the maximum number of problems produced by the server."
 				},
-				"languageServerExample.trace.server": {
+				"stratosLanguageServer.trace.server": {
 					"scope": "window",
 					"type": "string",
 					"enum": [
