--- a/tooling/vscode/stratos-language/.vscode/tasks.json
+++ b/tooling/vscode/stratos-language/.vscode/tasks.json
@@ -7,7 +7,7 @@
             "type": "process",
             "args": [
                 "build",
-                "${workspaceFolder}/csharp/AntlrServer.csproj",
+                "${workspaceFolder}/csharp/StratosServer.csproj",
                 "/property:GenerateFullPaths=true",
                 "/consoleloggerparameters:NoSummary"
             ],
@@ -19,7 +19,7 @@
             "type": "process",
             "args": [
                 "publish",
-                "${workspaceFolder}/csharp/AntlrServer.csproj",
+                "${workspaceFolder}/csharp/StratosServer.csproj",
                 "/property:GenerateFullPaths=true",
                 "/consoleloggerparameters:NoSummary"
             ],
@@ -32,7 +32,7 @@
             "args": [
                 "watch",
                 "run",
-                "${workspaceFolder}/csharp/AntlrServer.csproj",
+                "${workspaceFolder}/csharp/StratosServer.csproj",
                 "/property:GenerateFullPaths=true",
                 "/consoleloggerparameters:NoSummary"
             ],
