--- a/tooling/vscode/stratos-language/server/package.json
+++ b/tooling/vscode/stratos-language/server/package.json
@@ -9,7 +9,16 @@
 		"node": "*"
 	},
 	"dependencies": {
+		"antlr4": "^4.8.0",
+		"antlr4ts": "^0.5.0-alpha.3",
 		"vscode-languageserver": "^4.1.3"
 	},
-	"scripts": {}
+	"scripts": {
+		"gen":"java -jar   antlr-4.8-complete.jar  -visitor  -package StratosServer -o ../generated/ -Dlanguage=JavaScript StratosParser.g4 StratosLexer.g4",
+		
+		"gen-ts": "antlr4ts -visitor  -o src/generated   src/antlr/StratosParser.g4  src/antlr/StratosLexer.g4"
+	},
+	"devDependencies": {
+		"antlr4ts-cli": "^0.5.0-alpha.3"
+	}
 }
