--- a/tooling/vscode/stratos-language/server/package.json
+++ b/tooling/vscode/stratos-language/server/package.json
@@ -11,6 +11,7 @@
 	"dependencies": {
 		"antlr4": "^4.8.0",
 		"antlr4ts": "^0.5.0-alpha.3",
+		"vscode-languageserver-textdocument": "^1.0.1",
 		"vscode-languageserver": "^4.1.3"
 	},
 	"scripts": {
