--- a/tooling/vscode/package.json
+++ b/tooling/vscode/package.json
@@ -7,6 +7,13 @@
     "bugs": {
         "url": "https://github.com:Arthur-Kamau/stratos/issues"
     },
+    "keywords": [
+        "Stratos",
+        "Stratos-language",
+        "vscode",
+        "vscode-extension",
+        "vscode-language"
+    ],
     "author": {
         "name": "Arthur-Kamau"
     },
