--- a/compiler/Jvm/example/basic_example/app.conf
+++ b/compiler/Jvm/example/basic_example/app.conf
@@ -11,15 +11,13 @@
     # start = "init"
 
     #project description
-    description="""
-        A simple project to show stratos syntax
-    """
+    description=""" A simple project to show stratos syntax"""
 
     # dependancies
-    dependancies = [
+    dependencies = [
         # exmple of dependancy 
         # using  github
-        # {"runner" : "a git remote url"}
+         {"runner" : "a git remote url"}
         # or  using semantic version
         # {"runner" : "0.0.1"}
 
