--- a/sample/app_config_options/app.conf
+++ b/sample/app_config_options/app.conf
@@ -5,9 +5,9 @@ version = "0.0.1"
 #keyword for
 keywords = ["cnfiguration", "stratos"]
 
-description="""
+description="
         A simple project to show variables
-    """
+    "
 # (optional ) start command  start from  custom function.
 # start should be a valid function
 start = "main.start"
