--- a/sample/enum_type/app.conf
+++ b/sample/enum_type/app.conf
@@ -6,9 +6,9 @@ version = "0.0.1"
 keywords = ["enum"]
 
 #project description
-description="""
+description="
         A simple project to show enum syntax
-    """
+    "
 
 # dependancies
 dependancies = [
