--- a/sample/function_definition/app.conf
+++ b/sample/function_definition/app.conf
@@ -6,9 +6,9 @@ version = "0.0.1"
 keywords = ["functions"]
 
 #project description
-description="""
+description="
         A simple project to show Stratos Function definitions
-    """
+    "
 
 # dependancies
 dependancies = [ ]
