--- a/sample/imports/app.conf
+++ b/sample/imports/app.conf
@@ -5,9 +5,9 @@ version = "0.0.1"
 #keyword for
 keywords = ["Files","Package"]
 
-description="""
+description="
         A simple project to show impors from standard lib and custom package
-    """
+    "
 
 dependancies = [
 
