--- a/sample/loops/app.conf
+++ b/sample/loops/app.conf
@@ -5,9 +5,7 @@ version = "0.0.1"
 #keyword for
 keywords = ["loops"]
 
-description="""
-        A simple project to show loops
-    """
+description="A simple project to show loops"
 
 dependancies = [
 
