--- a/sample/variables/app.conf
+++ b/sample/variables/app.conf
@@ -5,9 +5,9 @@ version = "0.0.1"
 #keyword for
 keywords = ["variables"]
 
-description="""
+description="
         A simple project to show variables
-    """
+    "
 
 dependancies = [
 
