--- a/sample/empty_project/app.conf
+++ b/sample/empty_project/app.conf
@@ -10,9 +10,9 @@ keywords = ["example"]
 # start = "init"
 
 #project description
-description="""
+description="
         A simple project to show stratos syntax
-    """
+    "
 
 # dependancies
 dependancies = [
