--- a/sample/package/app.conf
+++ b/sample/package/app.conf
@@ -5,9 +5,9 @@ version = "0.0.1"
 #keyword for
 keywords = ["Files","Package"]
 
-description="""
+description="
         A simple project to show multiple files and packages
-    """
+    "
 
 dependancies = [
 
