--- a/tooling/intellij/src/main/resources/messages/StratosBundle.properties
+++ b/tooling/intellij/src/main/resources/messages/StratosBundle.properties
@@ -87,3 +87,66 @@ stratos.color.settings.description.top.level.variable.declaration=Top level vari
 stratos.color.settings.description.type.name.dynamic=Type 'dynamic'
 stratos.color.settings.description.type.parameter=Type parameter
 stratos.color.settings.description.unresolved.instance.member.reference=Unresolvable dynamic reference
+
+
+
+
+URL_GETTING_STARTED=https://github.com/Arthur-Kamau/stratos
+
+
+
+flutter.reload.firstRun.title=Flutter supports hot reload!
+flutter.reload.firstRun.content=Apply changes to your app in place, instantly.
+flutter.reload.firstRun.url=https://flutter.dev/docs/development/tools/hot-reload
+flutter.sdk.browse.path.label=Select Flutter SDK Path
+
+flutter.io.gettingStarted.url=https://flutter.dev/docs/get-started/install
+flutter.io.gettingStarted.IDE.url=https://flutter.dev/docs/development/tools/ide
+flutter.io.runAndDebug.url=https://flutter.dev/docs/development/tools/ide/android-studio#running-and-debugging
+
+flutter.module.name=Stratos
+flutter.project.description=Build high-performance, high-fidelity, apps using the Flutter framework.
+flutter.module.create.settings.type.label=Project &type:
+flutter.module.create.settings.type.application=Application
+flutter.module.create.settings.type.plugin=Plugin
+flutter.module.create.settings.type.package=Package
+flutter.module.create.settings.type.module=Module
+flutter.module.create.settings.type.import_module=Import Module
+flutter.module.create.settings.type.tip=Select a project type.
+flutter.module.create.settings.sample.tip=Select sample content.
+flutter.module.create.settings.sample.text=Generate sample content:
+flutter.module.create.settings.radios.org.label=&Organization:
+flutter.module.create.settings.org.default_text=com.example
+flutter.module.create.settings.org.tip=Enter a domain.
+flutter.module.create.settings.description.label=&Description:
+flutter.module.create.settings.description.tip=Enter a project description which shows up in the pubsec.yaml.
+flutter.module.create.settings.description.default_text=A new Flutter project.
+flutter.module.create.settings.location.select=Select Project Location
+flutter.module.create.settings.radios.android.label=Android language:
+flutter.module.create.settings.radios.android.java=&Java
+flutter.module.create.settings.radios.android.kotlin=&Kotlin
+flutter.module.create.settings.radios.android.tip=Select an Android language.
+flutter.module.create.settings.radios.ios.label=iOS language:
+flutter.module.create.settings.radios.ios.object_c=Objective-&C
+flutter.module.create.settings.radios.ios.swift=&Swift
+flutter.module.create.settings.radios.ios.tip=Select an iOS language.
+
+
+
+flutter.module.create.settings.help.label=Help:
+flutter.module.create.settings.help.getting_started_link_text=Getting started with your first Flutter app.
+flutter.module.create.settings.help.packages_and_plugins_text=Developing packages and plugins.
+flutter.module.create.settings.help.project_name.label=Project name:
+flutter.module.create.settings.help.project_name.description=Enter the project name with all lower case letters.
+flutter.module.create.settings.help.module_name.label=Module name:
+flutter.module.create.settings.help.module_name.description=Enter the module name with all lower case letters.
+flutter.module.create.settings.help.org.label=Organization:
+flutter.module.create.settings.help.org.description=Enter the organization domain name in reverse domain notation.
+flutter.module.create.settings.help.project_type.label=Project type:
+flutter.module.create.settings.help.project_type.description.app=Select an "Application" when building for end users.
+flutter.module.create.settings.help.project_type.description.plugin=Select a "Plugin" when exposing an Android or iOS API for developers.
+flutter.module.create.settings.help.project_type.description.package=Select a "Package" when creating a pure Dart component, like a new Widget.
+flutter.module.create.settings.help.project_type.description.module=Select a "Module" when creating a Flutter component to add to an Android or iOS app.
+flutter.module.create.settings.help.type.application=An "application" is a stand-alone app that can be installed and run on a mobile device.
+flutter.module.create.settings.help.type.package=A "package" is a pure-Dart component, like a new Widget, with no native code.
+flutter.module.create.settings.help.type.plugin=A "plugin" is used to expose an Android or iOS API for developers.
