--- a/tooling/intellij/src/main/resources/META-INF/plugin.xml
+++ b/tooling/intellij/src/main/resources/META-INF/plugin.xml
@@ -53,7 +53,7 @@
 		<programRunner implementation="org.stratos.lang.project.StratosRunner"/>
 		<configurationType implementation="org.stratos.lang.project.StratosRunConfigurationType"/>
 		<!--    stratos sdk details-->
-		<sdkType implementation="org.stratos.lang.module.sdk.StratosSdkType"/>
+		<sdkType implementation="org.stratos.lang.sdk.StratosSdkType"/>
 		<!--     create project in intellij wizard-->
 		<moduleType id="STRATOS_LANG_MODULE" implementationClass="org.stratos.lang.module.StratosModuleType"/>
 		<applicationService serviceImplementation="org.stratos.lang.listener.StratosApplicationService"/>
