--- a/compiler/stratos_native/CMakeLists.txt
+++ b/compiler/stratos_native/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 3.17)
 project(stratos_native)
 
+include_directories("${PROJECT_SOURCE_DIR}")
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(stratos_native main.cpp)
+add_executable(stratos_native main.cpp Lexer.cpp Node.cpp NodeType.cpp Parser.cpp Token.cpp TokenType.cpp)
