--- a/tooling/vscode/package.json
+++ b/tooling/vscode/package.json
@@ -1,39 +1,23 @@
 {
-    "name": "stratos-laguage",
-    "displayName": "stratos-laguage",
-    "description": "stratos language support",
-    "icon": "icons/images.jpg",
-    "version": "0.0.1",
-    "bugs": {
-        "url": "https://github.com:Arthur-Kamau/stratos/issues"
-    },
-    "keywords": [
-        "Stratos",
-        "Stratos-language",
-        "vscode",
-        "vscode-extension",
-        "vscode-language"
-    ],
-    "author": {
-        "name": "Arthur-Kamau"
+    "name": "stratos-language",
+    "displayName": "Stratos Language",
+    "description": "Language support for Stratos",
+    "version": "0.1.0",
+    "engines": {
+        "vscode": "^1.75.0"
     },
     "categories": [
-        "Programming Languages",
-        "Snippets"
+        "Programming Languages"
     ],
-    "homepage": "https://github.com:Arthur-Kamau/stratos#readme",
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com:Arthur-Kamau/stratos.git"
-    },
-    "engines": {
-        "vscode": "^1.50.0"
-    },
+    "activationEvents": [
+        "onLanguage:stratos"
+    ],
+    "main": "./out/extension.js",
     "contributes": {
         "languages": [{
             "id": "stratos",
             "aliases": ["Stratos", "stratos"],
-            "extensions": ["st"],
+            "extensions": [".st"],
             "configuration": "./language-configuration.json"
         }],
         "grammars": [{
@@ -47,5 +31,18 @@
                 "path": "./snippets/stratos.json"
             }
         ]
+    },
+    "scripts": {
+        "vscode:prepublish": "npm run compile",
+        "compile": "tsc -b",
+        "watch": "tsc -b -w"
+    },
+    "devDependencies": {
+        "@types/vscode": "^1.75.0",
+        "@types/node": "^16.11.7",
+        "typescript": "^4.9.0"
+    },
+    "dependencies": {
+        "vscode-languageclient": "^8.1.0"
     }
 }
