--- a/tooling/vscode/package.json
+++ b/tooling/vscode/package.json
@@ -2,12 +2,13 @@
     "name": "stratos-language",
     "displayName": "Stratos Language",
     "description": "Language support for Stratos",
-    "version": "0.1.0",
+    "version": "0.1.1",
     "engines": {
         "vscode": "^1.75.0"
     },
     "categories": [
-        "Programming Languages"
+        "Programming Languages",
+        "Themes"
     ],
     "activationEvents": [
         "onLanguage:stratos"
@@ -30,12 +31,19 @@
                 "language": "stratos",
                 "path": "./snippets/stratos.json"
             }
+        ],
+        "themes": [
+            {
+                "label": "Stratos Dark",
+                "uiTheme": "vs-dark",
+                "path": "./themes/stratos-dark-theme.json"
+            }
         ]
     },
     "scripts": {
         "vscode:prepublish": "npm run compile",
-        "compile": "tsc -b",
-        "watch": "tsc -b -w"
+        "compile": "tsc -p .",
+        "watch": "tsc -w -p ."
     },
     "devDependencies": {
         "@types/vscode": "^1.75.0",
@@ -43,6 +51,8 @@
         "typescript": "^4.9.0"
     },
     "dependencies": {
-        "vscode-languageclient": "^8.1.0"
+        "vscode-languageclient": "^8.1.0",
+        "vscode-languageserver": "^8.1.0",
+        "vscode-languageserver-textdocument": "^1.0.8"
     }
 }
