--- a/interpreter/C++/CMakeLists.txt
+++ b/interpreter/C++/CMakeLists.txt
@@ -8,13 +8,15 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 include_directories(include)
 
 # Gather source files (In a real project, you might list these explicitly to avoid re-globbing issues)
-file(GLOB_RECURSE SOURCES 
+file(GLOB_RECURSE SOURCES
     "src/*.cpp"
     "src/lexer/*.cpp"
     "src/parser/*.cpp"
     "src/sema/*.cpp"
     "src/codegen/*.cpp"
     "src/optimizer/*.cpp"
+    "src/runtime/*.cpp"
+    "src/config/*.cpp"
 )
 
 add_executable(stratos ${SOURCES})
